--- a/main.html
+++ b/main.html
@@ -4,13 +4,24 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<button type="button" class="btn btn-primary" id="button-1">Button-1</button>
+	<button type="button" class="btn btn-light btn-outline-secondary" id="button-2">Button-2</button>
+<button type="button" class="btn btn-success btn-lg">Button-3</button>
+<button type="button" class="btn btn-danger btn-sm">Button-4</button><br>
+<button type="button" class="btn btn-warning w-100">Button-5</button><br>
+<button type="button" class="btn btn-info">Button-6</button>
 
+<button type="button" class="btn btn-lighty">Button-7</button>
+
+<button type="button" class="btn btn-link">Button-8</button>
 </body>
 
 </html>
