--- a/main.html
+++ b/main.html
@@ -14,14 +14,14 @@
 </script>
 <button type="button" class="btn btn-primary" id="button-1">Button-1</button>
 	<button type="button" class="btn btn-light btn-outline-secondary" id="button-2">Button-2</button>
-<button type="button" class="btn btn-success btn-lg">Button-3</button>
-<button type="button" class="btn btn-danger btn-sm">Button-4</button><br>
-<button type="button" class="btn btn-warning w-100">Button-5</button><br>
-<button type="button" class="btn btn-info">Button-6</button>
+<button type="button" class="btn btn-success btn-lg" id="button-3">Button-3</button>
+<button type="button" class="btn btn-danger btn-sm" id="button-4">Button-4</button><br>
+<button type="button" class="btn btn-warning w-100" id="button-5">Button-5</button><br>
+<button type="button" class="btn btn-info" id="button-6">Button-6</button>
 
-<button type="button" class="btn btn-lighty">Button-7</button>
+<button type="button" class="btn btn-light" id="button-7">Button-7</button>
 
-<button type="button" class="btn btn-link">Button-8</button>
+<button type="button" class="btn btn-link" id="button-8">Button-8</button>
 </body>
 
 </html>
